--- a/.github/workflows/grs.yml
+++ b/.github/workflows/grs.yml
@@ -27,7 +27,7 @@ jobs:
         uses: readme-tools/github-readme-stats-action@v1
         with:
           card: top-langs
-          options: username=${{ github.repository_owner }}&hide=HTML,%20Jupyter%20Notebook,%20Smarty,%20PHP,%20CSS&langs_count=7&layout=compact
+          options: username=${{ github.repository_owner }}&hide=HTML,%20Jupyter%20Notebook,%20Smarty,%20PHP,%20CSS,%20TeX&langs_count=7&layout=compact
           path: profile/top-langs.svg
           token: ${{ secrets.PAT }}
 
